  - :phpmethod:`MongoDB\Database::getCollection()`: alias for :phpmethod:`MongoDB\Database::selectCollection()`
  
  The ``Client::selectCollection()``, ``Client::selectDatabase()``, and
  ``Database::selectCollection()`` methods will be deprecated and
  replaced by these new methods in a future driver release, so consider
  changing the usages in your application.

- Removes deprecated fields in GridFS types.

  - The library does not calculate the ``md5`` field when a file is
    uploaded to GridFS. If your application requires a file digest, you
    must implement this process outside GridFS and store the values in
    metadata.

  - The fields ``contentType`` and ``aliases`` are no longer stored in
    the ``files`` GridFS collection. If your application requires this
    information, you must store it in metadata. To learn more about
    GridFS, see the :ref:`php-gridfs` guide.

- Removes the following deprecated options for find operations:

  - ``maxScan``
  - ``modifiers``
  - ``oplogReplay``
  - ``snapshot``

  To learn about supported options for find operations, see the
  :phpmethod:`MongoDB\Collection::find()` or
  :phpmethod:`MongoDB\Collection::findOne()` API documentation.

- Removes the deprecated ``IndexInfo::isGeoHaystack()`` method.

- Removes the deprecated ``autoIndexId`` and ``flags`` options for the
  ``MongoDB\Database::createCollection()`` method.

- Drops support for map-reduce functionality by removing the following
  deprecated methods and types:

  - ``MongoDB\Collection::mapReduce()``
  - ``MongoDB\MapReduceResult``

  You can rewrite map-reduce operations by using aggregation pipeline
  stages such as ``$group`` and ``$merge``. To learn more, see
  :manual:`Map-Reduce to Aggregation Pipeline
  </reference/map-reduce-to-aggregation-pipeline/>` in the
  {+mdb-server+} manual.

- Removes the following ``Iterator`` implementations:

  - ``MongoDB\Model\CollectionInfoIterator``
  - ``MongoDB\Model\DatabaseInfoIterator``