@@ -115,8 +115,10 @@ Retrieve All Documents
 To retrieve all documents from a cursor, convert the cursor into an array by using
 either of the following methods:
 
-- ``MongoDB\\Driver\\Cursor::toArray()``: Call on a ``MongoDB\Driver\Cursor`` object
-- ``iterator_to_array()``: Pass a ``MongoDB\Driver\Cursor`` object as a parameter
+- :php:`MongoDB\Driver\Cursor::toArray() <mongodb-driver-cursor.toarray>`: Call
+  on a ``MongoDB\Driver\Cursor`` object
+- :php:`iterator_to_array() <function.iterator-to-array>`: Pass a
+  ``MongoDB\Driver\Cursor`` object as a parameter
 
 The following example calls the ``toArray()`` method on a cursor to store its results
 in an array:
