@@ -20,16 +20,17 @@ Definition
    .. code-block:: php
 
       function aggregate(
-          array $pipeline,
+          array|Pipeline $pipeline,
           array $options = []
       ): Traversable
 
 Parameters
 ----------
 
-``$pipeline`` : array
+``$pipeline`` : array|Pipeline
   Specifies an :manual:`aggregation pipeline </core/aggregation-pipeline>`
-  operation.
+  operation. You can include aggregation stages in a
+  ``MongoDB\Builder\Pipeline`` instance or in an array.
 
 ``$options`` : array
   An array specifying the desired options.
@@ -186,6 +187,7 @@ group, and sorts the results by name.
 See Also
 --------
 
+- :ref:`php-aggregation`
 - :phpmethod:`MongoDB\Database::aggregate()`
 - :manual:`aggregate </reference/command/aggregate>` command reference in the
   MongoDB manual
