@@ -64,6 +64,12 @@ and removals:
   replaced by these new methods in a future driver release, so consider
   changing the usages in your application.
 
+- Modifies the :phpmethod:`MongoDB\Database::aggregate()` and
+  :phpmethod:`MongoDB\Collection::aggregate()` methods so they can
+  accept a ``Pipeline`` instance as the ``$pipeline`` parameter. To view
+  examples that use this construction, see the
+  :ref:`php-aggregation-builder-api` section of the Aggregation guide.
+
 - Removes deprecated fields in GridFS types.
 
   - The library does not calculate the ``md5`` field when a file is
